Bug 1514801 - refactor clang based checker - KungFuDeathGripChecker. r=glandium

Differential Revision: https://phabricator.services.mozilla.com/D38187